# dots.ocr

./: README.md  pyproject.toml
docker/: Dockerfile  README.md
dots_ocr/: __init__.py  parser.py
dots_ocr/model/: inference.py
dots_ocr/utils/: image_utils.py
